Added Content to index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </main>
 <footer>
 	<p>&copy; 2018, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
-	<p>&copy; Tyler DeMarco, 2020</p>
+	<p>&copy; Derek Bradshaw, 2020</p>
 </footer>
 </body>
 </html>
